--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".Activities.CardDetailsActivity" android:screenOrientation="portrait"/>
         <activity android:name=".Activities.ActivityThankYou" android:screenOrientation="portrait"/>
         <activity android:name=".Activities.LoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.ReaderActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
